--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body a{
 }
 h1,h2,h3,h4,h5,h6{
 	margin:0;	
-	font-family: 'Text Me One', sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 }
 p{
 	margin:0;
