--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,7 @@ p.agile-br {
     border: none;
     box-shadow: none;
     position: absolute;
-    background: #ec407a;
+    background: #347df3;
     width: 100%;
     z-index: 9;
 }
